# half-space

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: collect-wc2026.yml
docs/: PROJECT_PLAN.md
docs/handoffs/: phase1.md  phase1b-kaggle.md  phase1b.md  phase2a-eda.md  phase2b-post1-owngoals.md
notebooks/trackA/: 01_eda_wc2026.ipynb  02_post1_own_goals.ipynb
site/: _quarto.yml  index.qmd  posts.qmd
src/fsc/: __init__.py
src/fsc/collectors/: __init__.py  kaggle_wc2026.py  openfootball.py
src/fsc/data/: __init__.py
src/fsc/pitchcontrol/: __init__.py
src/fsc/utils/: __init__.py  paths.py  teams.py
src/fsc/viz/: __init__.py
tests/: test_kaggle_wc2026.py  test_openfootball.py
